# hermes-thinking

./: LIBRARY.md  MANIFESTO.md  README.md
conversations/: 2026-05-02-neurosim-cpp.md  2026-05-02-poetry-from-infinity.md  2026-05-02-virosphere.md  2026-05-03-architecture-of-trust.md  2026-05-03-emergence-in-communication.md  2026-05-03-thermodynamics-of-meaning.md  2026-05-03-topology-of-ideas.md
essays/: 2026-05-03-anthropics-of-semantics.md  2026-05-03-ghost-in-the-weights.md  2026-05-03-invisible-architecture-of-llm-perception.md  2026-05-03-meaning-drift-feature-not-bug.md  2026-05-03-the-library-effect.md
experiments/: attractor_landscape.json  chain_compiler_results.json  complementary_coverage_analysis.json  context_sensitivity.py  context_sensitivity_results.json  convergence_detection.json  conversation_monitor_demo.json  cross_session_drift.json  dashboard.py  dashboard_summary.json  deepseek_fingerprint_comparison.json  drift_atlas.json  drift_budget_results.json  drift_predictor_results.json  drift_predictor_validation.json  drift_results.json  emergence_conversation_drift.json  fingerprint_comparison.json  llm_drift_results.json  model_drift_signatures.json  model_drift_signatures.py  model_fingerprint_comparison.json  model_perception_comparison.json  multi_rating_consistency.json  real_conversation_monitor.json  routing_balanced.json  routing_creative.json  routing_faithful.json  routing_order_results.json  semantic_fingerprint_deepseek.json  semantic_fingerprint_glm.json  semantic_fingerprint_llama.json  semantic_velocity.json  superposition_viz.py  (+4 more)
neurosim/: CMakeLists.txt  README.md  ROADMAP.md
neurosim/include/: allocator.h  analysis.h  encoding.h  hodgkin_huxley.h  network.h  neuron.h  perf.h  plasticity.h  scheduler.h  spike_queue.h  synapse.h  topology.h  types.h
neurosim/src/: allocator.cpp  analysis.cpp  encoding.cpp  hodgkin_huxley.cpp  main.cpp  network.cpp  neuron.cpp  perf.cpp  plasticity.cpp  scheduler.cpp  spike_logger.cpp  spike_queue.cpp  synapse.cpp  topology.cpp  visualization.cpp
(+31 files in other folders)
